Fix bug with checkout agreements
not showing validation message when checkbox is not checked

--- a/Magento_Checkout/web/css/source/_extend.less
+++ b/Magento_Checkout/web/css/source/_extend.less
@@ -169,15 +169,18 @@
         }
     }
 
+    .checkout-agreement.field.choice {
+
+        input {
+            display: none;
+        }
+    }
+
     .billing-address-same-as-shipping-block label,
     .checkout-agreement label {
         padding-left: 32px;
         line-height: 24px;
         position: relative;
-
-        input {
-            display: none;
-        }
 
         &:before {
             content: '';
